# ESP32-SIM70XX

./: CHANGELOG  CMakeLists.txt  Kconfig  README.md  library.json
examples/: CMakeLists.txt  Kconfig
examples/HTTP/: HTTP_POST.cpp  JSON_POST.cpp
examples/TCP/: JSON_POST.cpp
examples/main/: coap.cpp  email.cpp  example.h  examples.cpp  fs.cpp  http.cpp  main.cpp  mqtt.cpp  ntp.cpp  nvram.cpp  ssl.cpp  tcp_client.cpp  udp_client.cpp
examples/tools/: CoAP_Client.py  CoAP_Server.py  UDP_Server.py
include/: sim70xx.h  sim70xx_defs.h  sim70xx_errors.h  sim70xx_tools.h
include/SIM7020/: sim7020.h
include/SIM7020/Baerer/: sim7020_baerer.h
include/SIM7020/Definitions/: sim7020_defs.h  sim7020_pdp_defs.h
include/SIM7020/FOTA/: sim7020_fota.h
include/SIM7020/Misc/: sim7020_info.h  sim7020_nvram.h  sim7020_pdp.h
include/SIM7020/NVRAM/: sim7020_nvram.h
include/SIM7020/PDP/: sim7020_pdp.h
include/SIM7020/PowerManagement/: sim7020_pwrmgnt.h
include/SIM7020/Protocols/: sim7020_coap.h  sim7020_dns.h  sim7020_http.h  sim7020_mqtt.h  sim7020_ntp.h  sim7020_sntp.h  sim7020_tcpip.h
include/SIM7020/TLS/: sim7020_tls.h
include/SIM7080/: sim7080.h
include/SIM7080/Baerer/: sim7080_baerer.h
include/SIM7080/Definitions/: sim7080_defs.h
include/SIM7080/FOTA/: sim7080_fota.h
include/SIM7080/FileSystem/: sim7080_fs.h
include/SIM7080/GNSS/: sim7080_gnss.h
include/SIM7080/GPS/: sim7080_gps.h
include/SIM7080/Misc/: sim7080_fs.h  sim7080_info.h  (+1 more)
src/: sim70xx_tools.cpp
src/Private/: CMakeLists.txt
src/SIM7020/: sim7020.cpp
src/SIM7080/: sim7080.cpp
(+180 files in other folders)
